--- a/src/main/resources/templates/kassza/kezdes.html
+++ b/src/main/resources/templates/kassza/kezdes.html
@@ -45,7 +45,7 @@
     </a>
 </div>
 <p>
-    <a type="button" class="btn btn-danger"  href="adminFelulet.html" th:href="@{/kassza/belepes}">Admin</a>
+    <a type="button" class="btn btn-danger"  href="adminFelulet.html" th:href="@{/kassza/raktar}">Admin</a>
 </p>
 </body>
 </html>
