--- a/src/main/resources/templates/kassza/kassza.html
+++ b/src/main/resources/templates/kassza/kassza.html
@@ -22,7 +22,7 @@
                 <thead>
                 <tr style="font-size: 30px; border: 3px solid black">
                     <h3>Kosár tartalma:</h3></tr>
-                <tr th:each="termekmennyiseg : ${kivalasztottTermek}">
+                <tr th:each="termekmennyiseg : ${kosar.getTermekMennyisegDtoList()}">
                     <th scope="col" th:text ="${termekmennyiseg.nev}">Termék neve</th>
                     <th scope="col"  th:text ="${termekmennyiseg.ar}">Ár</th>
                     <th scope="col" th:text = "${termekmennyiseg.mennyiseg}">Mennyiség</th>
@@ -54,13 +54,13 @@
             <hr>
             <h3>Új termék hozzáadása</h3>
             <form class="row"
-                  th:action="@{/kassza/kassza/addtermek}" method="post"
+                  th:action="@{'/kassza/{kosarId}/addtermek' (kosarId=${kosar.kosarId})}" method="post"
                   th:object="${termekMennyisegHozzaadasCommand}"
             >
                 <div class="col">
                     <label>
                         <select th:field="*{vonalkod}" class="form-select">
-                            <option th:each="type : ${allKasszaTermek}"
+                            <option th:each="type : ${allTermek}"
                                     th:value="${type.vonalkod}"
                                     th:text="${type.megnevezes}"></option>
                         </select>
@@ -68,6 +68,7 @@
                 </div>
                 <div class="col">
                     <label>
+                        <input type="hidden" th:field="*{kosarId}">
                         <input type="text"
                                class="form-control"
                                placeholder="Mennyiség"
@@ -88,7 +89,7 @@
         </div>
         <div class="col-2">
         </div>
-        <div class="col-3" style="font-size: 50px;text-align: center;border: 3px solid black; background-color: whitesmoke">
+        <div class="col-3" style="font-size: 50px;text-align: center;border: 3px solid black; background-color: whitesmoke" th:text="${kosar.getTermekMennyisegDtoList().size() == 0} ? 'Aktuálisan hozzáadott termék neve' : ${kosar.getTermekMennyisegDtoList().get(kosar.getTermekMennyisegDtoList().size()-1).getNev()} + ' ' + ${kosar.getTermekMennyisegDtoList().get(kosar.getTermekMennyisegDtoList().size()-1).getMennyiseg()} + ' db'"> <!--th:text="${kosar.getTermekMennyisegDtoList().get(kosar.getTermekMennyisegDtoList().size()-1)}">-->
                         Aktuálisan hozzáadott termék neve
         </div>
     </div>
@@ -98,7 +99,7 @@
     <br>
     <br>
     <div class="row" style="text-align: center; font-size: 30px">
-        <div class="col-7" style="background-color: yellow; border: 3px black" th:text="'Végösszeg: '+${allKosarTermek.vegosszeg}+'Ft'" >
+        <div class="col-7" style="background-color: yellow; border: 3px black" th:text="'Végösszeg: '+${kosar.vegosszeg}+'Ft'" >
             Végösszeg: 0 Ft
         </div>
         <div class="col-1">
