--- a/src/main/resources/templates/kassza/raktar.html
+++ b/src/main/resources/templates/kassza/raktar.html
@@ -1,129 +1,118 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Önkiszolgáló kassza</title>
+    <title>Raktár</title>
 </head>
-<body style="background-image: url(/images/kassza/hatter.jpg)" th:src = "@{/images/kassza/hatter.jpg}">
-<h1 style="text-align: center">Raktár</h1>
-<br>
-<br>
-<div class="container">
-    <div class="row">
-        <div class="col-12" style="border: 3px solid black; background-color: whitesmoke">
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-                    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-                    crossorigin="anonymous"></script>
-            <table class="table table-blue table-striped">
-                <thead>
-                <tr style="font-size: 30px; border: 3px solid black">
-                    <h3>Raktár tartalma:</h3></tr>
-                <tr th:each="termek : ${allTermek}">
-                    <th scope="col" th:text="${termek.getMegnevezes}">Termék neve</th>
-                    <th scope="col" th:text="${termek.getAr}">Ár</th>
-                    <th scope="col" th:text="${termek.getMennyiseg}">Mennyiség</th>
-                    <th scope="col" th:text="${termek.getVonalkod}">Vonalkód</th>
-                    <th scope="col"></th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr >
-                    <td>Termék neve</td>
-                    <td>ára</td>
-                    <td>mennyiség</td>
-                    <td>vonalkód</td>
-                    <!--                    <td th:text="${termek.mennyiseg}">10.0</td>-->
-                    <td>
-                        <div class="row">
-                            <div class="col">
-                                <form>
-                                    <input type="submit" class="btn btn-success" value="Módosít"/>
-                                </form>
-                            </div>
-                            <div class="col">
-                                <form>
-                                    <input type="submit" class="btn btn-danger" value="Törlés"/>
-                                </form>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-            <hr>
-            <h3>Új termék hozzáadása</h3>
-            <form class="row"
-                  th:action="@{/kassza/addTermek}" method="post"
-                  th:object="${termekHozzaadasa}"
-            >
-                <div class="col">
-                    <label>
-                        <input type="text"
-                               class="form-control"
-                               placeholder="név"
-                               th:field="*{megnevezes}"
-                               th:classappend="${#fields.hasErrors('megnevezes')} ? 'is-invalid' : 'is-valid'"/>
-                        <div class="invalid-feedback"
-                             th:if="${#fields.hasErrors('megnevezes')}"
-                             th:errors="*{megnevezes}">
-                            Hibaüzenet
-                        </div>
-                    </label>
-                </div>
-                <div class="col">
-                    <label>
-                        <input type="text"
-                               class="form-control"
-                               placeholder="Ár"
-                               th:field="*{ar}"
-                               th:classappend="${#fields.hasErrors('ar')} ? 'is-invalid' : 'is-valid'"/>
-                        <div class="invalid-feedback"
-                             th:if="${#fields.hasErrors('ar')}"
-                             th:errors="*{ar}">
-                            Hibaüzenet
-                        </div>
-                    </label>
-                </div>
-                <div class="col">
-                    <label>
-                        <input type="text"
-                               class="form-control"
-                               placeholder="Vonalkód"
-                               th:field="*{vonalkod}"
-                               th:classappend="${#fields.hasErrors('vonalkod')} ? 'is-invalid' : 'is-valid'"/>
-                        <div class="invalid-feedback"
-                             th:if="${#fields.hasErrors('vonalkod')}"
-                             th:errors="*{vonalkod}">
-                            Hibaüzenet
-                        </div>
-                    </label>
-                </div>
-                <div class="col">
-                    <label>
-                        <input type="text"
-                               class="form-control"
-                               placeholder="Mennyiség"
-                               th:field="*{mennyiseg}"
-                               th:classappend="${#fields.hasErrors('mennyiseg')} ? 'is-invalid' : 'is-valid'"/>
-                        <div class="invalid-feedback"
-                             th:if="${#fields.hasErrors('mennyiseg')}"
-                             th:errors="*{mennyiseg}">
-                            Hibaüzenet
-                        </div>
-                    </label>
-                </div>
-                <div class="col">
-                    <input class="btn btn-primary" type="submit" value="Hozzáad"/>
-                </div>
+<body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+<table class="table table-dark table-striped">
+    <thead>
+    <tr>
+        <th scope="col">Id</th>
+        <th scope="col">Név</th>
+        <th scope="col">Ár</th>
+        <th scope="col">Mennyiség</th>
+        <th scope="col">Vonalkód</th>
+        <th scope="col"></th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="item : ${allItem}">
+        <th scope="row" th:text="${item.id}">0</th>
+        <td th:text="${item.megnevezes}">Név</td>nev
+        <td th:text="${item.ar}">100</td>
+        <td th:text="${item.mennyiseg}">Tipus</td>
+        <td th:text="${item.vonalkod}">Tipus</td>
+        <td>
+            <form style="text-align: right" th:action="@{'/kassza/raktar/{id}'(id=${item.id})}" method="get">
+                <input type="submit" class="btn btn-success edit-btn" value="Módosít"/>
             </form>
-            <hr>
-        </div>
-
+        </td>
+        <td>
+            <form style="text-align: right" th:action="@{'/kassza/raktar/delete/{id}'(id=${item.id})}" method="post">
+                <input type="submit" class="btn btn-danger" value="Töröl"/>
+            </form>
+        </td>
+    </tr>
+    </tbody>
+</table>
+<h3 th:if="${formItem.id == null}">Termék hozzáadása</h3>
+<h3 th:if="${formItem.id != null}">Termék módosítása</h3>
+<form th:action="@{'/kassza/raktar/{id}' (id=${formItem.id})}"
+      method="post" th:object="${formItem}" class="row">
+    <div class="col">
+        <label>
+            <input type="text"
+                   class="form-control"
+                   placeholder="Megnevezés"
+                   th:field="*{megnevezes}"
+                   th:classappend="${#fields.hasErrors('megnevezes')} ? 'is-invalid' : 'is-valid'"/>
+            <div class="invalid-feedback"
+                 th:if="${#fields.hasErrors('megnevezes')}"
+                 th:errors="*{megnevezes}">
+                Hibaüzenet
+            </div>
+        </label>
     </div>
-</div>
+    <div class="col">
+        <label>
+            <input type="text"
+                   class="form-control"
+                   placeholder="Ár"
+                   th:field="*{ar}"
+                   th:classappend="${#fields.hasErrors('ar')} ? 'is-invalid' : 'is-valid'"/>
+            <div class="invalid-feedback"
+                 th:if="${#fields.hasErrors('ar')}"
+                 th:errors="*{ar}">
+                Hibaüzenet
+            </div>
+        </label>
+    </div>
+    <div class="col">
+        <label>
+            <input type="text"
+                   class="form-control"
+                   placeholder="Mennyiseg"
+                   th:field="*{mennyiseg}"
+                   th:classappend="${#fields.hasErrors('mennyiseg')} ? 'is-invalid' : 'is-valid'"/>
+            <div class="invalid-feedback"
+                 th:if="${#fields.hasErrors('mennyiseg')}"
+                 th:errors="*{mennyiseg}">
+                Hibaüzenet
+            </div>
+        </label>
+    </div>
+    <div class="col">
+        <label>
+            <input type="text"
+                   class="form-control"
+                   placeholder="Vonalkód"
+                   th:field="*{vonalkod}"
+                   th:classappend="${#fields.hasErrors('vonalkod')} ? 'is-invalid' : 'is-valid'"/>
+            <div class="invalid-feedback"
+                 th:if="${#fields.hasErrors('vonalkod')}"
+                 th:errors="*{vonalkod}">
+                Hibaüzenet
+            </div>
+        </label>
+    </div>
+    <div class="col">
+        <input th:if="${formItem.id == null}" class="btn btn-primary" type="submit" value="Hozzáad"/>
+        <input th:if="${formItem.id != null}" class="btn btn-primary" type="submit" value="Módosít"/>
+    </div>
+</form>
+<form th:action="@{/}" style="padding-top: 2%">
+    <div id="back-button" class="position-relative" style="text-align: center">
+        <button class="btn btn-primary btn-lg" type="submit">VISSZA</button>
+    </div>
+</form>
 </body>
 </html>
