--- a/src/main/resources/templates/kassza/kassza.html
+++ b/src/main/resources/templates/kassza/kassza.html
@@ -22,18 +22,21 @@
                 <thead>
                 <tr style="font-size: 30px; border: 3px solid black">
                     <h3>Kosár tartalma:</h3></tr>
+                <tr >
+                    <td>Termék neve</td>
+                    <td>Egység Ár</td>
+                    <td>Darab</td>
+                    <!--                    <td th:text="${termek.mennyiseg}">10.0</td>-->
+
+                </tr>
+                </thead>
+                <tbody>
                 <tr th:each="termekmennyiseg : ${kosar.getTermekMennyisegDtoList()}">
                     <th scope="col" th:text ="${termekmennyiseg.nev}">Termék neve</th>
                     <th scope="col"  th:text ="${termekmennyiseg.ar}">Ár</th>
                     <th scope="col" th:text = "${termekmennyiseg.mennyiseg}">Mennyiség</th>
                     <th scope="col"></th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr >
-                    <td>Termék neve</td>
-                    <td>100</td>
-<!--                    <td th:text="${termek.mennyiseg}">10.0</td>-->
+
                     <td>
                         <div class="row">
                             <div class="col">
@@ -42,13 +45,15 @@
                                 </form>
                             </div>
                             <div class="col">
-                                <form>
+                                <form th:action="@{'/kassza/{kosarId}/delete/{termekMId}'(kosarId=${kosar.kosarId},termekMId =${termekmennyiseg.termekMennyisegId})}" method="post">
                                     <input type="submit" class="btn btn-danger" value="Törlés"/>
                                 </form>
                             </div>
                         </div>
                     </td>
                 </tr>
+
+
                 </tbody>
             </table>
             <hr>
@@ -62,13 +67,13 @@
                         <select th:field="*{vonalkod}" class="form-select">
                             <option th:each="type : ${allTermek}"
                                     th:value="${type.vonalkod}"
-                                    th:text="${type.megnevezes}"></option>
+                                    th:text="${type.megnevezes} + '  (' + ${type.mennyiseg} +')'"></option>
                         </select>
                     </label>
                 </div>
                 <div class="col">
                     <label>
-                        <input type="hidden" th:field="*{kosarId}">
+
                         <input type="text"
                                class="form-control"
                                placeholder="Mennyiség"
@@ -89,7 +94,7 @@
         </div>
         <div class="col-2">
         </div>
-        <div class="col-3" style="font-size: 50px;text-align: center;border: 3px solid black; background-color: whitesmoke" th:text="${kosar.getTermekMennyisegDtoList().size() == 0} ? 'Aktuálisan hozzáadott termék neve' : ${kosar.getTermekMennyisegDtoList().get(kosar.getTermekMennyisegDtoList().size()-1).getNev()} + ' ' + ${kosar.getTermekMennyisegDtoList().get(kosar.getTermekMennyisegDtoList().size()-1).getMennyiseg()} + ' db'"> <!--th:text="${kosar.getTermekMennyisegDtoList().get(kosar.getTermekMennyisegDtoList().size()-1)}">-->
+        <div class="col-3" style="font-size: 50px;text-align: center;border: 3px solid black; background-color: whitesmoke" th:text="${kosar.getUtolsoHozzaadottTermekmennyisegDto() == null} ? 'Aktuálisan hozzáadott termék neve' : ${kosar.getUtolsoHozzaadottTermekmennyisegDto().getNev()} + ' ' + ${kosar.getUtolsoHozzaadottTermekmennyisegDto().getMennyiseg()} + ' db'">  <!--th:text="${kosar.getTermekMennyisegDtoList().size() == 0} ? 'Aktuálisan hozzáadott termék neve' : ${kosar.getTermekMennyisegDtoList().get(kosar.getTermekMennyisegDtoList().size()-1).getNev()} + ' ' + ${kosar.getTermekMennyisegDtoList().get(kosar.getTermekMennyisegDtoList().size()-1).getMennyiseg()} + ' db'"> -->
                         Aktuálisan hozzáadott termék neve
         </div>
     </div>
