--- a/src/main/resources/templates/kassza/kezdes.html
+++ b/src/main/resources/templates/kassza/kezdes.html
@@ -47,7 +47,7 @@
 <p th:action="@{/kassza/raktar}" method="post"
 th:object="${allTermek}"
 >
-    <a type="button" class="btn btn-danger"  href="adminFelulet.html" th:href="@{/kassza/raktar}">Admin</a>
+    <a type="button" class="btn btn-danger"  href="raktar.html" th:href="@{/kassza/raktar}">Admin</a>
 </p>
 </body>
 </html>
