--- a/src/main/resources/templates/kassza/kassza.html
+++ b/src/main/resources/templates/kassza/kassza.html
@@ -40,7 +40,7 @@
                     <td>
                         <div class="row">
                             <div class="col">
-                                <form>
+                                <form th:action="@{'/kassza/{kosarId}/delete/{termekMId}'(kosarId=${kosar.kosarId},termekMId =${termekmennyiseg.termekMennyisegId})}" method="get">
                                     <input type="submit" class="btn btn-success" value="Módosít"/>
                                 </form>
                             </div>
