--- a/src/main/resources/templates/kassza/bankkartyaUrlap.html
+++ b/src/main/resources/templates/kassza/bankkartyaUrlap.html
@@ -43,7 +43,7 @@
 
 <p class="example"></p>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<form action="visszaigazolas.html" class="row g-3 needs-validation" novalidate>
+<form th:action="@{/kassza/szamla}" class="row g-3 needs-validation" novalidate>
     <div class="col-md-4">
         <label for="validationCustom01" class="form-label">Vezetéknév</label>
         <input type="text" class="form-control" id="validationCustom01" value="írd ide a vezetékneved" pattern="^[^0-9]{0,30}$" required>
@@ -97,7 +97,7 @@
         </div>
     </div>
     <div class="col-12">
-        <button class="btn btn-primary" type="submit">Vásárlás</button>
+        <button class="btn btn-primary" href="szamla.html" th:href="@{/kassza/szamla}"type="submit">Vásárlás</button>
     </div>
 </form><br>
 <div style="vertical-align: middle">
