--- a/src/main/resources/templates/kassza/kassza.html
+++ b/src/main/resources/templates/kassza/kassza.html
@@ -74,7 +74,7 @@
                 </div>
                 <div class="col">
                     <label>
-                        <input type="text"
+                        <input type="number"
                                class="form-control"
                                placeholder="Mennyiség"
                                th:field="*{mennyiseg}"
