--- a/src/main/resources/templates/kassza/kassza.html
+++ b/src/main/resources/templates/kassza/kassza.html
@@ -7,6 +7,11 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Önkiszolgáló kassza</title>
+    <style>
+        *{
+            font-family: sans-serif;
+        }
+    </style>
 </head>
 <body style="background-image: url(/images/kassza/hatter.jpg)" th:src = "@{/images/kassza/hatter.jpg}">
 <h1 style="text-align: center">Üdvözöljük!</h1>
@@ -111,7 +116,7 @@
         <div class="col-1">
         </div>
         <div class="col-2" style="text-align: center; font-size: 30px">
-            <form th:action="@{'/kassza/bankkartyaUrlap/{kosarId}'(kosarId=${kosar.kosarId})}" method="get">
+            <form th:action="@{'/kassza/fizetes/{kosarId}'(kosarId=${kosar.kosarId})}" method="get">
                 <input type="submit" class="btn btn-danger" value="bankártyás fizetés"/>
             </form>
         </div>
