--- a/src/main/resources/templates/kassza/kassza.html
+++ b/src/main/resources/templates/kassza/kassza.html
@@ -11,6 +11,10 @@
         *{
             font-family: sans-serif;
         }
+        .list-group{
+            margin-bottom: 10px;
+            overflow: scroll;
+        }
     </style>
 </head>
 <body style="background-image: url(/images/kassza/hatter.jpg)" th:src = "@{/images/kassza/hatter.jpg}">
@@ -23,7 +27,7 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
                     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
                     crossorigin="anonymous"></script>
-            <table class="table table-blue table-striped">
+            <table class="list-group">
                 <thead>
                 <tr style="font-size: 30px; border: 3px solid black">
                     <h3>Kosár tartalma:</h3></tr>
