--- a/src/main/resources/templates/kassza/szamla.html
+++ b/src/main/resources/templates/kassza/szamla.html
@@ -13,6 +13,7 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 <h1>Számla</h1>
+<div class="col-8">
 <table class="table table-striped">
     <tbody>
     <tr>
@@ -25,11 +26,14 @@
         <td th:text="${item.nev}">Név</td>
         <td th:text="${item.ar}">100</td>
         <td th:text="${item.mennyiseg}">Mennyiseg</td>
-        <td th:text="${item.mennyiseg}*${item.ar}" style="text-align: right">Összesen</td>
+        <td th:text="${item.mennyiseg}*${item.ar}" style="text-align: center">Összesen</td>
 
     </tr>
     </tbody>
 </table>
+<div class="col-2"></div>
+</div>
+</div>
 <div class="col-7" style="background-color: yellow; border: 3px black" th:text="'Végösszeg: '+${kosar.vegosszeg}+'Ft'" >
     Végösszeg: 0 Ft
 </div>
