--- a/src/main/resources/templates/kassza/kezdes.html
+++ b/src/main/resources/templates/kassza/kezdes.html
@@ -51,4 +51,7 @@ th:object="${allTermek}"
     <a type="button" class="btn btn-danger"  href="raktar.html" th:href="@{/kassza/raktar}">Admin</a>
 </p>
 </body>
+<footer style="font-size: 14px">
+    Verzio: 1.0
+</footer>
 </html>
