--- a/src/main/resources/templates/kassza/raktar.html
+++ b/src/main/resources/templates/kassza/raktar.html
@@ -112,6 +112,10 @@
     <div id="back-button" class="position-relative" style="text-align: center">
         <button class="btn btn-primary btn-lg" type="submit">VISSZA</button>
     </div>
+</form>
 </div>
 </body>
+<footer style="font-size: 14px">
+    Verzio: 1.0
+</footer>
 </html>
