--- a/src/main/resources/templates/kassza/szamla.html
+++ b/src/main/resources/templates/kassza/szamla.html
@@ -40,5 +40,10 @@
 <form th:action="@{'/kassza/{kosarId}'(kosarId=${kosar.kosarId})}">
     <input type="submit" value="Vissza">
 </form>
+<input type="submit" class="btn btn-success" value="Fizetés készpénzzel"/>
+<input type="submit" class="btn btn-danger" value="Fizetés bankkártyával"/>
 </body>
+<footer style="font-size: 14px">
+    Verzio: 1.0
+</footer>
 </html>
