--- a/src/main/resources/templates/kassza/kassza.html
+++ b/src/main/resources/templates/kassza/kassza.html
@@ -12,11 +12,9 @@
         * {
             font-family: sans-serif;
         }
-
-        .list-group {
+        .list-group{
             margin-bottom: 10px;
             overflow: scroll;
-            height: 250px;
         }
     </style>
 </head>
@@ -137,14 +135,13 @@
         </div>
         <div class="col-2" style="text-align: center; font-size: 30px">
             <form th:action="@{'/kassza/fizetes/{kosarId}'(kosarId=${kosar.kosarId})}" method="get">
-                <input type="submit" class="btn btn-danger" value="bankártyás fizetés"/>
+                <input type="submit" class="btn btn-danger" value="Tovább a számlához"/>
             </form>
-        </div>
-        <div class="col-2">
-            <a type="button" class="btn btn-success" href="visszaigazolas.html" th:href="@{/kassza/visszaigazolas}">fizetés
-                készpénzzel</a>
         </div>
     </div>
 </div>
 </body>
+<footer style="font-size: 14px">
+    Verzio: 1.0
+</footer>
 </html>
