--- a/src/main/resources/templates/kassza/kassza.html
+++ b/src/main/resources/templates/kassza/kassza.html
@@ -15,6 +15,7 @@
         .list-group{
             margin-bottom: 10px;
             overflow: scroll;
+            height: 250px;
         }
     </style>
 </head>
