--- a/src/main/resources/templates/kassza/kassza.html
+++ b/src/main/resources/templates/kassza/kassza.html
@@ -14,7 +14,8 @@
         }
         .list-group{
             margin-bottom: 10px;
-            overflow: scroll;
+            overflow-x: hidden;
+            overflow-x: scroll;
             height: 250px;
         }
     </style>
@@ -29,7 +30,7 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
                     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
                     crossorigin="anonymous"></script>
-            <table class="list-group">
+            <table class="table table-striped">
                 <thead>
                 <tr style="font-size: 30px; border: 3px solid black">
                     <h3>Kosár tartalma:</h3></tr>
@@ -42,7 +43,8 @@
 
                 </tr>
                 </thead>
-                <tbody>
+
+                <tbody class="list-group">
                 <tr th:each="termekmennyiseg : ${kosar.getTermekMennyisegDtoList()}">
                     <th style="width: 150px" scope="col" th:text="${termekmennyiseg.nev}">Termék neve</th>
                     <th style="width: 100px" scope="col" th:text="${termekmennyiseg.ar}">Ár</th>
@@ -69,8 +71,6 @@
                         </div>
                     </td>
                 </tr>
-
-
                 </tbody>
             </table>
             <hr>
