--- a/src/main/resources/templates/kassza/kassza.html
+++ b/src/main/resources/templates/kassza/kassza.html
@@ -7,17 +7,22 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Bootstrap Font Icon CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
     <title>Önkiszolgáló kassza</title>
     <style>
         * {
             font-family: sans-serif;
         }
-        .list-group{
+
+        .list-group {
             margin-bottom: 10px;
             overflow: scroll;
             height: 250px;
         }
     </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body style="background-image: url(/images/kassza/hatter.jpg)" th:src="@{/images/kassza/hatter.jpg}">
 <h1 style="text-align: center">Üdvözöljük!</h1>
@@ -139,8 +144,47 @@
                 <input type="submit" class="btn btn-danger" value="Tovább a számlához"/>
             </form>
         </div>
+        <div class="col-2">
+            <div th:if="${kosar.getTermekMennyisegDtoList().size() == 0}">
+                <form th:action="@{'/kassza/torles/{kosarId}'(kosarId=${kosar.kosarId})}" method="post">
+                    <input type="submit" class="btn btn-primary" value="Vissza"/>
+                </form>
+            </div>
+            <!-- Button trigger modal -->
+            <div th:if="${kosar.getTermekMennyisegDtoList().size() > 0}">
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                    Vissza
+                </button>
+            </div>
+        </div>
     </div>
 </div>
+
+
+<!-- Modal -->
+<div class="modal fade alert-danger" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
+     tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="staticBackdropLabel"><i class="bi-exclamation-triangle-fill"></i> Biztosan
+                    visszalép?</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                A visszalépés törli a kosarat!
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Mégsem</button>
+                <form th:action="@{'/kassza/torles/{kosarId}'(kosarId=${kosar.kosarId})}" method="post">
+                    <input type="submit" class="btn btn-primary" value="Igen"/>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 </body>
 <footer style="font-size: 14px">
     Verzio: 1.0
