--- a/src/main/resources/templates/kassza/kassza.html
+++ b/src/main/resources/templates/kassza/kassza.html
@@ -15,7 +15,7 @@
             font-family: sans-serif;
         }
 
-        .list-group {
+        .list-group2 {
             margin-bottom: 10px;
             overflow: scroll;
             height: 250px;
@@ -47,12 +47,12 @@
 
                 </tr>
                 </thead>
-                <tbody>
-                <tr th:each="termekmennyiseg : ${kosar.getTermekMennyisegDtoList()}">
+                <tbody class="list-group2">
+                <tr  th:each="termekmennyiseg, iter : ${kosar.getTermekMennyisegDtoList()}" th:style="${iter.index % 2 == 0} ? 'background-color:#D3D3D3' : 'background-color:#F8F8F8'">
                     <th style="width: 150px" scope="col" th:text="${termekmennyiseg.nev}">Termék neve</th>
                     <th style="width: 100px" scope="col" th:text="${termekmennyiseg.ar}">Ár</th>
                     <th style="width: 50px" scope="col" th:text="${termekmennyiseg.mennyiseg}">Mennyiség</th>
-                    <th style="width: 100px" scope="col" th:text="${termekmennyiseg.mennyiseg*termekmennyiseg.ar}">
+                    <th style="width: 100px; font-style: italic" scope="col" th:text="${termekmennyiseg.mennyiseg*termekmennyiseg.ar} + ' Ft'">
                         Mennyiség
                     </th>
                     <th style="width: 100px" scope="col"></th>
@@ -62,13 +62,19 @@
                             <div class="col">
                                 <form th:action="@{'/kassza/{kosarId}/modosit/{termekMId}'(kosarId=${kosar.kosarId},termekMId =${termekmennyiseg.termekMennyisegId})}"
                                       method="get">
-                                    <input type="submit" class="btn btn-success" value="Módosít"/>
+                                    <!--<input type="submit" class="btn btn-success" value="Módosít"/>-->
+                                    <button type="submit" class="btn btn-success">
+                                        <i class="bi bi-pen"></i>
+                                    </button>
                                 </form>
                             </div>
                             <div class="col">
                                 <form th:action="@{'/kassza/{kosarId}/delete/{termekMId}'(kosarId=${kosar.kosarId},termekMId =${termekmennyiseg.termekMennyisegId})}"
                                       method="post">
-                                    <input type="submit" class="btn btn-danger" value="Törlés"/>
+                                    <!--<input type="submit" class="btn btn-danger" value="Törlés"/>-->
+                                   <button type="submit" class="btn btn-danger">
+                                    <i class="bi bi-trash"></i>
+                                   </button>
                                 </form>
                             </div>
                         </div>
