--- a/src/main/resources/templates/kassza/kassza.html
+++ b/src/main/resources/templates/kassza/kassza.html
@@ -149,7 +149,7 @@
         </div>
         <div class="col-2" style="text-align: center; font-size: 30px">
             <form th:action="@{'/kassza/fizetes/{kosarId}'(kosarId=${kosar.kosarId})}" method="get">
-                <input type="submit" class="btn btn-danger" value="Tovább a számlához"/>
+                <input th:disabled ="${kosar.getTermekMennyisegDtoList().size() == 0}" type="submit" class="btn btn-danger" value="Tovább a számlához"/>
             </form>
         </div>
         <div class="col-2">
